--- a/Notes/25. How does javascript execute code - call stack.md
+++ b/Notes/25. How does javascript execute code - call stack.md
@@ -1,232 +1,291 @@
 
-# 📘 JavaScript Code Execution – Interview Notes
+# JavaScript Code Execution – Interview Notes (Detailed)
 
-## 🧠 How JavaScript Executes Code
+---
 
-JavaScript is a **single-threaded** language that uses the **Execution Context** and **Call Stack** to manage the execution of code.
+## How Does JavaScript Execute Code?
 
-When a JavaScript file runs, the **JavaScript engine** creates **Execution Contexts** and manages them using the **Call Stack**.
+JavaScript is a **single-threaded**, **synchronous** language that uses:
 
-## ⚙️ Execution Context
+- **Execution Contexts**: The environment in which code is evaluated.
+- **Call Stack**: A stack data structure to track which function is currently running and what gets executed next.
 
-An **Execution Context** is an environment in which JavaScript code is evaluated and executed.
+When a JavaScript program runs:
 
-There are **3 types** of Execution Contexts:
+1. A **Global Execution Context (GEC)** is created first.
+2. Functions are executed within their own **Function Execution Contexts (FEC)**.
+3. All these contexts are managed in a **Call Stack**, with LIFO behavior.
+
+---
+
+## What is an Execution Context?
+
+An **Execution Context** is an environment where JavaScript code is evaluated and executed. It includes:
+
+- **Memory Component (Variable Environment)**: Stores variables and function declarations.
+- **Code Component (Thread of Execution)**: Executes the code line-by-line.
+- **`this` Binding**: Depends on how the code is invoked.
+
+### Types of Execution Contexts:
 
 1. **Global Execution Context (GEC)**
-2. **Functional Execution Context (FEC)**
-3. **Eval Execution Context** *(rarely used, created by `eval()` function)*
+   - Created by default when the JavaScript file runs.
+   - Binds the `this` keyword to the global object.
+     - In browser: `window`
+     - In Node.js: `global`
 
-## 🧭 Phases of Code Execution
+2. **Function Execution Context (FEC)**
+   - Created whenever a function is invoked.
+   - Has its own:
+     - Variable Environment
+     - Scope Chain
+     - `this` value
 
-JavaScript code is executed in **two phases**:
+3. **Eval Execution Context**
+   - Created when the `eval()` function is used (rarely recommended).
+   - Can execute a string of JavaScript code.
+
+---
+
+## Global Execution Context in the Browser
+
+- The first execution context that is created.
+- Binds `this` to the `window` object.
+- All variables and functions declared globally are attached to the `window` object.
+
+```js
+console.log(this); // window
+```
+
+---
+
+## JavaScript Execution – The Two Phases
+
+JavaScript code is executed in **two main phases**:
 
 ### 1️⃣ Memory Creation Phase (Creation Phase)
 
-* **Memory is allocated** for all variables and functions.
-* Variables are assigned **`undefined`** initially.
-* Function declarations are stored in memory as-is.
-* The `this` keyword is set (depends on environment: `window` in browsers).
+- Space is allocated for:
+  - Variables → initially set to `undefined`
+  - Function declarations → stored entirely
+- `this` is initialized
+  - In browser: `this = window`
 
-### 2️⃣ Execution Phase
+Example:
 
-* Variables are assigned actual values.
-* Functions are executed (creating new execution contexts).
-
-## 🗂️ Example Breakdown
-
-```javascript
+```js
 let val1 = 10;
-let val2 = 5;
-
 function addNum(a, b) {
   return a + b;
 }
-
-let result1 = addNum(val1, val2);
-let result2 = addNum(10, 2);
 ```
 
-### 🌀 Memory Creation Phase (Global Execution Context):
+Memory Phase Output:
 
-| Variable | Value               |
-| -------- | ------------------- |
-| val1     | undefined           |
-| val2     | undefined           |
-| addNum   | function(){}        |
-| result1  | undefined           |
-| result2  | undefined           |
-| this     | window (in browser) |
+| Identifier | Value           |
+|------------|-----------------|
+| val1       | undefined       |
+| addNum     | function(){...} |
+| this       | window          |
 
-### 🚀 Execution Phase:
+---
 
-| Step                         | Action                                        |
-| ---------------------------- | --------------------------------------------- |
-| val1 = 10                    | Assign value                                  |
-| val2 = 5                     | Assign value                                  |
-| result1 = addNum(val1, val2) | New **Function Execution Context** is created |
-| result2 = addNum(10, 2)      | New **Function Execution Context** is created |
+### 2️⃣ Execution Phase
 
-## 🌐 Global Execution Context (in Browser)
+- Variables are assigned actual values
+- Functions are invoked (which triggers creation of FEC)
 
-* Created automatically by JavaScript engine before any code runs.
-* Attached to the **`window` object** (in browsers).
-* `this` inside the global context points to `window`.
-* Only one Global Execution Context exists per file/runtime.
+Continuing the example:
 
-```javascript
-console.log(this); // window (in browser)
+```js
+let val1 = 10; // val1 = 10
+let result = addNum(5, 3); // triggers Function Execution Context
 ```
 
-## 🔁 Function Execution Context
+---
 
-Each time a function is invoked:
+## Functional Execution Context (FEC)
 
-* A new **Function Execution Context** is created.
-* It has:
+Every time a function is called:
 
-  * **Variable Environment** (local memory)
-  * **Scope Chain**
-  * **`this` binding**
-* Gets **pushed** to the **Call Stack**.
+1. A **new execution context** is created.
+2. It goes through the same two phases (Memory + Execution).
+3. It is pushed to the **Call Stack**.
+4. After function returns, it is popped off the Call Stack.
 
-## 🧱 Call Stack
+Inside the FEC:
 
-* A **stack data structure** used to keep track of execution contexts.
-* **LIFO** (Last In, First Out).
-* When a function is called → pushed to the stack.
-* When it returns → popped off the stack.
+- **Arguments** passed to the function
+- **Local Variables**
+- **Return values**
 
-## 📜 Adding JavaScript Files in Browser
+Example:
 
-### 1. Inline JS
+```js
+function addNum(a, b) {
+  let total = a + b;
+  return total;
+}
+```
+
+FEC Memory Phase:
+
+| Identifier | Value     |
+|------------|-----------|
+| a          | undefined |
+| b          | undefined |
+| total      | undefined |
+
+FEC Execution Phase:
+
+| Identifier | Value |
+|------------|-------|
+| a          | 5     |
+| b          | 3     |
+| total      | 8     |
+
+---
+
+## Call Stack in JavaScript
+
+The **Call Stack** is a mechanism that JavaScript uses to keep track of function calls.
+
+### Characteristics:
+
+- **LIFO** (Last In, First Out)
+- When a function is invoked:
+  - Its execution context is **pushed** onto the stack
+- When it returns:
+  - The context is **popped** off the stack
+
+Example:
+
+```js
+function one() {
+  two();
+}
+
+function two() {
+  console.log("Two");
+}
+
+one();
+```
+
+Stack Flow:
+
+```
+Initial → [Global Context]
+Call one() → [one, Global]
+Call two() → [two, one, Global]
+Return → [one, Global]
+Return → [Global]
+```
+
+---
+
+## Is JavaScript Single-Threaded?
+
+Yes. JavaScript runs on a **single-threaded** model:
+
+- **One Call Stack**
+- **One Memory Heap**
+- **One thread of execution**
+
+Asynchronous tasks (like `setTimeout`, `fetch`, etc.) are handled using:
+
+- **Web APIs**
+- **Callback Queue**
+- **Event Loop**
+
+But the execution still happens one at a time via the **Call Stack**.
+
+---
+
+## Execution Contexts Across Runtimes
+
+Every JavaScript runtime has:
+
+| Runtime | Global Object |
+|---------|---------------|
+| Browser | `window`      |
+| Node.js | `global`      |
+| Deno    | `globalThis`  |
+| Bun     | `globalThis`  |
+
+Execution context **concept stays the same** across all runtimes. What changes is the global object and available APIs.
+
+---
+
+## How to Add JavaScript Files in Browsers
+
+### 1. Inline JavaScript
 
 ```html
 <script>
-  console.log("Hello from inline script!");
+  alert("Hello!");
 </script>
 ```
 
-### 2. Internal JS
+### 2. Internal JavaScript
 
 ```html
 <head>
   <script>
-    // code here
+    console.log("Inside Head");
   </script>
 </head>
 ```
 
-### 3. External JS
+### 3. External JavaScript
 
 ```html
-<script src="script.js"></script>
+<script src="app.js"></script>
 ```
 
-## 🧵 Is JavaScript Single Threaded?
+**Best practice:** Use **external JS** and include it **before closing the body tag** or with `defer`:
 
-Yes. JavaScript is **single-threaded**, meaning:
-
-* Executes one command at a time.
-* One **Call Stack** and one **Memory Heap**.
-* **Concurrency** is achieved through asynchronous features (e.g., Event Loop, Web APIs, Promises).
-
-## 🌍 Execution Contexts in Other Runtimes
-
-Each runtime (Node.js, Deno, Bun) has:
-
-* Their own version of the **Global Object**:
-
-  * **Browser**: `window`
-  * **Node.js**: `global`
-  * **Deno**: `globalThis`
-* But the **concept of execution context** remains the same.
-* They differ in available APIs, not in how JS executes.
-
-## 🔁 Summary
-
-| Concept                      | Description                             |
-| ---------------------------- | --------------------------------------- |
-| Execution Context            | Environment for code execution          |
-| Global Execution Context     | Created first, only once                |
-| Functional Execution Context | Created for each function call          |
-| Eval Execution Context       | Created by `eval()` (not commonly used) |
-| Call Stack                   | Keeps track of all execution contexts   |
-| Two Phases                   | 1. Memory Creation 2. Execution         |
-| `this` in Browser            | Refers to `window` object               |
-| Single-threaded              | JavaScript runs one task at a time      |
+```html
+<script src="app.js" defer></script>
+```
 
 ---
 
-Important for interviews:
+## Debugging Call Stack in Browser
 
-How does the javascript execute code
+You can observe the **Call Stack** in browser developer tools:
 
+1. Open **DevTools**
+2. Go to **Sources > Snippets**
+3. Write your JS code
+4. Use `debugger;` keyword or set breakpoints
+5. View **Call Stack** in the right panel
 
+Example:
 
-Execution Context:
+```js
+function greet() {
+  debugger;
+  console.log("Hi");
+}
+greet();
+```
 
+---
 
+## Summary Table
 
+| Concept              | Description                                 |
+|----------------------|---------------------------------------------|
+| Execution Context     | Environment where JS is evaluated           |
+| GEC                  | Created first; only one per JS program      |
+| FEC                  | Created every time a function is called     |
+| Eval Context         | Created when using `eval()` (rare use case) |
+| Memory Phase         | Allocates memory, sets vars to `undefined`  |
+| Execution Phase      | Executes line-by-line and assigns values    |
+| Call Stack           | Tracks execution contexts using LIFO        |
+| `this` in Browser    | Refers to `window`                          |
+| Single-threaded      | JS runs one task at a time                  |
+| Adding JS to Browser | Inline, Internal, or External               |
 
-
-Call Stack:
-
-
-
-
-How to add javascript files in browsers?
-
-
-
-Javascript Ececution Context:
-- Whatever files you have created, how javascript will run/execute it.
-- Javascript runs your program in two phases.
-- Remember, when you give code files to javascript, first a global execution context is created.
-- Global executon context is referred to a varibale called "this"
-
-Explain the Global Execution Context in Browser?
-
-Every runtime environments like NodeJS, Bun, DenoJS have different execution context?
-
-In browser, the value of this varibale returns window object in browser.
-
-It is executed in threads.
-Javascript is single threaded.
-
-
-Global Execution Context
-Functional  Execution Context
-Eval Execution Context(Property of global obejct)
-
-
-
-How javascript code gets executed?
-- 2 phases
-
-1st phase - memory creation phase(creation phase)
-- memory is  allocated for varibales etc
-- 
-
-
-2nd phase - Execution phase
-- 1. Clobal Execution --> this
-- 2. Memory creation phase: 
-        - val1 = undefined
-        - val2 = undefined
-        - addNum = definition(for functions)
-        - result1 = undefined
-        - result2 = undefined
-        - this is known as first cycle, and it will  always  happen
-- 3. Execution phase:
-        - val1 = 10
-        - val2 = 5
-        - addNum- creates another execution context
-            - in the new execution context, new variable environment + execution thread is created
-        - result1 = 
-        - result2 = 
-13:00
-
-
-- 
-- 
+---
