--- a/Notes/40. Promise in javascript.md
+++ b/Notes/40. Promise in javascript.md
@@ -275,3 +275,5 @@ A: `resolve()` marks success and sends a value to `.then()`. `reject()` marks fa
 A: With `.then()` for success, `.catch()` for failure, and `.finally()` for post-processing.
 
 ---
+
+Watch this lecture again
