--- a/Notes/42. Object Oriented in Javascript.md
+++ b/Notes/42. Object Oriented in Javascript.md
@@ -1,1 +1,249 @@
-Object Oriented in Javascript
+# 🧠 Object-Oriented Programming (OOP) in JavaScript
+
+---
+
+## ❓ Does JavaScript Have Classes?
+
+### ✅ Short Answer (for Interviews):
+
+Yes, JavaScript has classes, introduced in ES6 (2015), but they are syntactic sugar over the existing prototype-based inheritance.
+
+### 🧠 Expanded Answer:
+
+JavaScript is fundamentally prototype-based. When you create a class in JavaScript using the `class` keyword, it is just a cleaner, more readable way of setting up functions and prototypes underneath. It helps developers familiar with class-based languages like Java or C++ to write OOP-style code.
+
+---
+
+## 🎯 Programming Paradigms in JavaScript
+
+* **Object-Oriented Programming (OOP)**
+* **Functional Programming**
+
+---
+
+## 🤖 Objects in JavaScript
+
+* Objects are collections of **properties** (data) and **methods** (functions).
+
+* Example:
+
+  ```js
+  const user = {
+    username: "hitesh",
+    loginCount: 8,
+    signedIn: true,
+    getUserDetails: function() {
+      console.log(this); // refers to 'user' object
+    }
+  };
+  ```
+
+* `this` keyword: Inside `getUserDetails`, `this` refers to the object that called the method (`user` in this case).
+
+---
+
+## 🧱 Why Use OOP in JavaScript?
+
+### Problems in unstructured code:
+
+* **Spaghetti code**: Complex and tangled code that's hard to manage or reuse.
+
+### OOP Benefits:
+
+* Modular code
+* Reusability
+* Scalability
+* Easier debugging and testing
+
+---
+
+# ⚙️ Core Parts of OOP in JavaScript
+
+---
+
+## 🔹 1. Object Literal
+
+An object created manually using `{}`:
+
+```js
+const user = {
+  username: 'hitesh',
+  loginCount: 8,
+  signedIn: true,
+  getUserDetails: function() {
+    console.log(this); // Refers to the current object
+  }
+};
+```
+
+Drawbacks:
+
+* Cannot easily create multiple instances (blueprints/templates needed)
+
+---
+
+## 🔹 2. Constructor Functions
+
+Used to create multiple object instances with shared structure:
+
+```js
+function User(username, loginCount, isLoggedIn) {
+  this.username = username;
+  this.loginCount = loginCount;
+  this.isLoggedIn = isLoggedIn;
+
+  // returning 'this' is optional with 'new'
+  return this;
+}
+```
+
+Usage:
+
+```js
+const userOne = new User('hitesh', 8, true);
+const userTwo = new User('john', 5, false);
+```
+
+### 🔑 Key Concepts:
+
+* `new` keyword:
+
+  1. Creates a new empty object: `{}`
+  2. Sets the context of `this` to the new object
+  3. Calls the constructor function
+  4. Links the new object to the prototype
+  5. Returns the new object
+
+* `this`: Refers to the new object being created.
+
+* `userOne instanceof User` → `true`
+
+---
+
+## 🔹 3. Prototypes
+
+Every function in JavaScript has a `prototype` property that is used for inheritance.
+
+```js
+User.prototype.incrementLogin = function() {
+  this.loginCount++;
+};
+```
+
+Benefits:
+
+* Methods are shared between instances.
+* Efficient memory usage (no duplication of methods).
+
+---
+
+## 🔹 4. Classes (ES6)
+
+Syntactic sugar over constructor functions and prototypes.
+
+```js
+class User {
+  constructor(username, loginCount, isLoggedIn) {
+    this.username = username;
+    this.loginCount = loginCount;
+    this.isLoggedIn = isLoggedIn;
+  }
+
+  getUserDetails() {
+    console.log(`Username: ${this.username}`);
+  }
+}
+```
+
+Usage:
+
+```js
+const userOne = new User("hitesh", 10, true);
+```
+
+---
+
+# ⚡ Instances and `this`
+
+## 🔹 Instances
+
+Objects created from a constructor or class using `new`:
+
+```js
+const user1 = new User("alice", 3, true);
+```
+
+## 🔹 `this` Keyword
+
+* Inside object literal: refers to the object
+* Inside constructor/class: refers to the instance being created
+* In global scope (non-strict): refers to `window` (in browsers)
+
+---
+
+## ❗ Without `new` Keyword
+
+```js
+const user = User('hitesh', 8, true); // 'this' will refer to global object
+```
+
+Results in properties being attached to the global object (undesired).
+
+---
+
+# 💡 Four Pillars of OOP
+
+## 🔸 1. Abstraction
+
+* Hiding complex implementation details.
+* Example: `fetch()` hides internal XMLHttpRequest logic.
+
+## 🔸 2. Encapsulation
+
+* Bundling data and functions into a single unit (class).
+* Protects internal state using closures or private properties (from ES2022: `#` syntax).
+
+## 🔸 3. Inheritance
+
+* One class can extend another, sharing methods and properties.
+
+```js
+class Admin extends User {
+  constructor(username, loginCount, isLoggedIn, role) {
+    super(username, loginCount, isLoggedIn);
+    this.role = role;
+  }
+}
+```
+
+## 🔸 4. Polymorphism
+
+* Same method behaves differently in different classes.
+
+```js
+class Animal {
+  speak() {
+    console.log("Animal speaks");
+  }
+}
+
+class Dog extends Animal {
+  speak() {
+    console.log("Dog barks");
+  }
+}
+```
+
+---
+
+# 🔄 Summary of Key Concepts and Code
+
+| Concept                | Purpose                           | Example                       |
+| ---------------------- | --------------------------------- | ----------------------------- |
+| `Object Literal`       | Create one-off objects            | `const obj = {}`              |
+| `Constructor Function` | Create reusable blueprints        | `function User(...)`          |
+| `new` Keyword          | Creates an instance, binds `this` | `new User(...)`               |
+| `this` Keyword         | Refers to calling context         | `this.username = ...`         |
+| `prototype`            | Share methods across instances    | `User.prototype.method = ...` |
+| `class`                | Modern syntax for OOP             | `class User {}`               |
+| `instanceof`           | Checks object type                | `userOne instanceof User`     |
